<resources>
    <string name="app_name">Park Up!</string>
    <string name="meetingsicreated">Meetings I Created</string>
    <string name="allmeetings">All My Meetings</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="viewName">Meeting Name</string>
    <string name="viewAddress">Address</string>
    <string name="viewDescription">Description</string>
    <string name="viewParticipants">View Participants</string>
    <string name="viewDelete">Delete</string>
    <string name="viewVerify">Verify Location</string>
</resources>